Add validation for task creation dates and enhance schedule overlap resolution